tests/errors/erro_sintatico_missing_end.lua
function void main()
    if true then
        print("Falta o end deste if");
    -- Deveria ter um 'end' aqui
end
